Bug 856331 - Make breakpad unwinding runtime switchable. r=jseward